--- a/src/assets/scss/ImageAndWelcome.scss
+++ b/src/assets/scss/ImageAndWelcome.scss
@@ -1,19 +1,12 @@
 .main-banner{
-    position: relative;
-    padding: 0;
-    overflow: hidden;
+    background-image: url(../images/main-banner.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     .banner-masking{
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+        padding: 50px 0;
         background-image: linear-gradient(to top, #000000, 40%, rgba(0, 0, 0, 0));
 
         .valign-banner{
-            position: relative;
-            top: 50%;
-            transform: translateY(-50%);
             text-align: center;
             color: #fff;
             h4{
